Fix a hangup when double-clicking with Flood Selection Tool

Since fill command may read from the merged image, it should wait
until the entire image completes its updates, therefore the job
type shoudl be 'barrier'.

BUG:450577